# MessagingChallenge

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  ProblemStatement.txt  Readme.md  Readme.txt  baseMessage.cpp  baseMessage.h  derivedMessage.cpp  derivedMessage.h  main.cpp  printMessage.cpp  printMessage.h  test.cpp  test.h  testHarness.cpp  testHarness.h  testMessage.cpp  testMessage.h
apps/: CMakeLists.txt  messagingchallenge.cpp
consumer/: CMakeLists.txt  consumer.cpp
docs/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  messagingexample.cpp
include/: derivedMessage.h
messages/: CMakeLists.txt
messages/cmake/: messagesConfig.cmake  messagesConfigVersion.cmake  messagesVersion.h.in
messages/include/messages/: baseMessage.h  derivedMessage.h  messagesVersion.h  printMessage.h
messages/src/: baseMessage.cpp  derivedMessage.cpp  printMessage.cpp
src/: CMakeLists.txt  baseMessage.cpp  testMessage.cpp
test/: CMakeLists.txt  runMessagingTests.cpp  testMessage.cpp  testMessage.h
